# ros2_nav2

./: README.md  README_en.md  package.xml  setup.py  test.yaml
config/: jdbot_k3_diff.yaml  rgbd_nav2_params.yaml
launch/: nav2.launch.py  nav2_for_slam.launch.py  nav2_rtabmap_rgbd.launch.py  slam_location_nav2_launch.py
map/: my_map.pgm  my_map.yaml
nav2/: __init__.py  autonomous_patrol.py  round_trip_grab_task.py
tests/: check_nav2_logic.py  test_waypoint_contract.sh  test_zmq_timeout.sh
